# discord-bot-commercial-template

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  lint.yml  test.yml
app/: bot.py  main.py
app/api/: main.py
app/cogs/: admin.py  billing.py  guild.py  support.py  system.py  user.py
app/core/: config.py  exceptions.py  lifecycle.py  logging.py  permissions.py  security.py
app/database/: session.py
app/integrations/: discord.py  github.py  openai.py  stripe.py  webhook.py
app/jobs/: cleanup_job.py  report_job.py  scheduler.py  subscription_checker.py
app/middlewares/: audit.py  error_handler.py  maintenance.py  rate_limit.py
app/models/: audit_log.py  feature_flag.py  guild.py  plan.py  subscription.py  user.py
app/plugins/: loader.py  registry.py
app/services/: audit_service.py  billing_service.py  guild_service.py  notification_service.py  permission_service.py  subscription_service.py  user_service.py
deploy/: nginx.conf  systemd.service
docs/: ai-development-guide.en.md  ai-development-guide.md  api.en.md  api.md  architecture.en.md  architecture.md  billing.en.md  billing.md  deployment.en.md  deployment.md  plugin-system.en.md  plugin-system.md
prompts/: add-commercial-feature.en.md  add-commercial-feature.md  add-plugin.en.md  add-plugin.md  code-review.en.md  code-review.md  fix-production-bug.en.md  fix-production-bug.md
scripts/: create_admin.py  init_db.py  seed_data.py  sync_commands.py
tests/: conftest.py
(+25 files in other folders)
